Some basic download functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 appdirs==1.4.3
-dotenv==0.0.5
+click==6.7
 fudge==1.1.0
 packaging==16.8
+pprint==0.1
 pyparsing==2.2.0
+python-dotenv==0.6.4
 requests==2.13.0
 simplejson==3.10.0
 six==1.10.0
